fix URL import